traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:20: error: ')' expected but 'else' found.
  }else if (getX()==6 && getY()==6){
   ^